@@ -1,0 +1,12 @@
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Invalid resource</title>
+    </head>
+    <body>
+        <img src="what://::" alt="I'm broken">
+        <img src="https://.i/" alt="Me too">
+    </body>
+</html>
